[package]
name = "check-blocks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blocks_iterator = "0.12"
env_logger = "0.9"
bitcoin = "0.27"

log = "0.4"
# Revision with 6.0.1 version
miniscript-old = { package = "miniscript", git = "https://github.com/rust-bitcoin/rust-miniscript", rev ="d1c6b9f91b3d0ac35b8fdc7b6633214b07e10d8d" }
miniscript-new = { package = "miniscript", version = "6.1.0" }